re PR target/91269 (unaligned floating-point register with -mcpu=niagara4 -fcall-used-g6)

PR target/91269
	* config/sparc/sparc.h (HARD_REGNO_CALLER_SAVE_MODE): Define.

From-SVN: r275995